5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1716_2499.log
== SUBMITION (2019-05-14 16:09:58) 
-- CODE:
n=int(input("entradas: "))
f=0
fa=0
from math import *
while(f<n):
	fa= fa +(1/factorial(f))
	f=f+1
print(round(fa,8))

-- EXECUTION TIME:
0.162732
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:10:35) 
-- CODE:
n=int(input("entradas: "))
f=0
fa=0
from math import *
while(f<n):
	fa= fa +(1/factorial(f))
	f=f+1
print(round(fa,8))

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:12:49) 
-- CODE:
k=int(input("entradas: "))
f=0
fa=0
from math import *
while(f<k):
	fa= fa +(1/factorial(f))
	f=f+1
print(round(fa,8))

-- EXECUTION TIME:
0.12283
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:13:44) 
-- CODE:
k=int(input("K: "))
a1=0
a2=0
from math import *
while(a1<k):
	a2 = a2 +(1/factorial(a1))
	f=f+1
print(round(fa,8))

-- EXECUTION TIME:
0.145076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 7, in <module>
    f=f+1
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:13:46) 
-- CODE:
k=int(input("K: "))
a1=0
a2=0
from math import *
while(a1<k):
	a2 = a2 +(1/factorial(a1))
	f=f+1
print(round(fa,8))

-- EXECUTION TIME:
0.164014
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 7, in <module>
    f=f+1
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:13:47) 
-- CODE:
k=int(input("K: "))
a1=0
a2=0
from math import *
while(a1<k):
	a2 = a2 +(1/factorial(a1))
	f=f+1
print(round(fa,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    f=f+1
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:14:16) 
-- CODE:
k=int(input("K: "))
a1=0
a2=0
from math import *
while(a1<k):
	a2 = a2 +(1/factorial(a1))
	a1= a1 + 1
print(round(fa,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(fa,8))
NameError: name 'fa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:14:16) 
-- CODE:
k=int(input("K: "))
a1=0
a2=0
from math import *
while(a1<k):
	a2 = a2 +(1/factorial(a1))
	a1= a1 + 1
print(round(fa,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(fa,8))
NameError: name 'fa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:14:17) 
-- CODE:
k=int(input("K: "))
a1=0
a2=0
from math import *
while(a1<k):
	a2 = a2 +(1/factorial(a1))
	a1= a1 + 1
print(round(fa,8))

-- EXECUTION TIME:
0.179974
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 8, in <module>
    print(round(fa,8))
NameError: name 'fa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:14:17) 
-- CODE:
k=int(input("K: "))
a1=0
a2=0
from math import *
while(a1<k):
	a2 = a2 +(1/factorial(a1))
	a1= a1 + 1
print(round(fa,8))

-- EXECUTION TIME:
0.160782
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 8, in <module>
    print(round(fa,8))
NameError: name 'fa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:14:18) 
-- CODE:
k=int(input("K: "))
a1=0
a2=0
from math import *
while(a1<k):
	a2 = a2 +(1/factorial(a1))
	a1= a1 + 1
print(round(fa,8))

-- EXECUTION TIME:
0.170055
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 8, in <module>
    print(round(fa,8))
NameError: name 'fa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:14:18) 
-- CODE:
k=int(input("K: "))
a1=0
a2=0
from math import *
while(a1<k):
	a2 = a2 +(1/factorial(a1))
	a1= a1 + 1
print(round(fa,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(fa,8))
NameError: name 'fa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:14:18) 
-- CODE:
k=int(input("K: "))
a1=0
a2=0
from math import *
while(a1<k):
	a2 = a2 +(1/factorial(a1))
	a1= a1 + 1
print(round(fa,8))

-- EXECUTION TIME:
0.248891
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 8, in <module>
    print(round(fa,8))
NameError: name 'fa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:16:56) 
-- CODE:
k=int(input("K: "))
a1=0
a2=0
from math import *
while(a1<k):
	a2 = a2 +(1/factorial(a1))
	a1= a1 + 1
print(round(a2,8))

-- EXECUTION TIME:
0.184008
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:16:57) 
-- CODE:
k=int(input("K: "))
a1=0
a2=0
from math import *
while(a1<k):
	a2 = a2 +(1/factorial(a1))
	a1= a1 + 1
print(round(a2,8))

-- EXECUTION TIME:
0.131886
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
